dev/styles.css
*:focus {
  outline: 0;
}

a.button,
.print-accordion {
  background: #000;
  border: 0;
  border-radius: 4px; 
  color: #fff !important;
  display: inline-block;
  font-size: 1rem;
  margin: 0;
  padding: .5rem;
  text-align: center;
  text-decoration: none;
}

a.button:hover,
.print-accordion:hover{
  background: #000;
  color: #cfb87c !important;
  cursor: pointer;
  text-decoration: none;
}

blockquote {
  margin: 2rem 0 0 1rem; 
}

body, 
.ms-core-overlay {
  background-color: #fff;
}

h1,
.ms-core-pageTitle {
  color: #000;
  font-size: 2.77rem;
}

h1,
h1>div,
.ms-core-pageTitle, 
#DeltaPlaceHolderPageTitleInTitleArea {
  font-family: "Segoe UI Light","Segoe UI Light","Segoe UI","Segoe",Tahoma,Helvetica,Arial,sans-serif;
}

h2, 
h3,
h4,
.ms-h2, 
.ms-headerFont {
  font-family: MuliRegular, Helvetica, Arial, sans-serif !important;
}

h2,
h3 {
  margin-bottom: 1rem;
}

h2,
h2.ms-rteElemnet-H2,
.ms-rtestate-field h2 {
  color: #565a5c;
  font-weight: bold;
}

h3 {
  color: #bd472a;
  font-weight:bold;
}

h4{
  font-size: 1.1em;
  font-weight: bold;
  line-height: 100% !important;
  margin-bottom: .75rem;
}

section {
  margin-bottom: 1rem;
  margin-top: 1rem;
}

select:focus {
  border: 1px solid #bbb; 
}

.center {
  text-align: center;
}

.clearfix:after {
  clear: both;
}

.clearfix:before, 
.clearfix:after {
  content: "";
  display: table;
}

.gray-background {
  background: #ededed;
}

.hidden {
  display: none;
}

#DeltaPlaceHolderMain a:link,
#breadcrumbContainer a:link,
#breadcrumbContainer a:visited {
  color: #03c;
}

#DeltaPlaceHolderMain a:link,
#DeltaPlaceHolderMain a:visited {
  text-decoration: underline;
}

#DeltaPlaceHolderMain a:visited {
  color: #797979;
}

#DeltaPlaceHolderMain a:hover,
#DeltaPlaceHolderMain a.button:link,
#breadcrumbContainer a:link,
#breadcrumbContainer a:visited,
#DeltaPlaceHolderMain thead a:link,
#DeltaPlaceHolderMain thead a:visited,
#DeltaPlaceHolderMain .ms-webpart-titleText a:link,
#DeltaPlaceHolderMain .ms-webpart-titleText a:visited {
  text-decoration: none;
}

#DeltaPlaceHolderMain thead a:link,
#DeltaPlaceHolderMain thead a:visited {
  color: #777;
}



/**********************************************************
    
                    Table Styles

**********************************************************/

table.custom-table {
  width: 100%;
}

table.custom-table th {
  font-weight: bold;
}

table.custom-table tbody tr:nth-child(2n) {
  background-color: #ededed;
}



/**********************************************************
    
                    List Styles

**********************************************************/

ul.no-bullets {
  list-style-type: none;
}

ul.column-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

ul.column-list.four>li {
  width: 22.5%;
}

ul.column-list.three>li {
  width: 30%;
}

ul.column-list.two>li {
  width: 45%;
}

.no-bullets ul {
  list-style: none !important;
}


/**********************************************************
    
               Loading Spinner

**********************************************************/

#loadingMessage {
  left: 50%;
  position: absolute;
}

.spinner {
  animation: spin 2s linear infinite;
  border: 8px solid #e1e1e1;
  border-radius: 50%;
  border-top: 8px solid #cfb87c;
  height: 40px;
  margin-left: 18px;
  width: 40px;
}

@-webkit-keyframes spin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}



/**********************************************************
    
               Breadcrumb Styles

**********************************************************/

#breadcrumbContainer {
  display: none;
  margin-left: 6rem; 
  margin-top: 3rem;
}



/**********************************************************
    
               Custom Navigation

**********************************************************/

/******************** Main Nav ********************/

nav {
  margin-left: 80px;
  padding: 1rem;
}

nav .ms-core-listMenu-root>li.static>ul>li {
  font-size: .9rem;
} 

#DeltaTopNavigation li.dynamic-children span.dynamic-children:hover {
  cursor: default;
}

#DeltaTopNavigation .dynamic-children ul.dynamic {
  background-color: #ededed;
  border: 1px solid #ddd;
  box-shadow: none;
  width: 225px !important;
}

.ms-core-listMenu-horizontalBox .ms-core-listMenu-selected:link,
.ms-core-listMenu-horizontalBox .ms-core-listMenu-selected,
#DeltaTopNavigation a:visited {
  color: #000;
}

.ms-core-listMenu-item:hover,
.ms-core-listMenu-horizontalBox a.ms-core-listMenu-item:hover,
#sideNavBox a:hover {
  color: #000;
}

.ms-core-listMenu-item.ms-bold {
  font-weight: normal !important;
}

#DeltaTopNavigation .dynamic-children .dynamic {
  list-style-type: none;
}

#DeltaTopNavigation .dynamic-children .dynamic a {
  display: block;
  padding: .85rem;
}

#DeltaTopNavigation .dynamic-children .dynamic a:hover {
  background: #cfb87c;
}

#DeltaTopNavigation .active-nav-item>.ms-core-listMenu-item {
  border-bottom: 2px solid #cfb87c;
}



/******************** Term Store Nav Rules ********************/

#DeltaTopNavigation ul.root {
  margin-left: 6rem;
}

/* Style rules if using structured navigation
#DeltaTopNavigation ul.root>li.static>a {
  display: none;
}

#DeltaTopNavigation ul.root>li.static>ul.static {
  margin-left: 6rem;
}
*/



/******************** Side Nav ********************/

#DeltaPlaceHolderLeftNavBar>div>.ms-core-listMenu-verticalBox {
  display: none;
}

#sideNavBox {
  margin-top: .85rem;
}

#sideNavBox li>a.ms-core-listMenu-item:hover {
  background-color: #cfb87c;
}

#sideNavBox .ms-core-listMenu-root ul.static {
  border-top: 2px solid rgba(210, 210, 210, 0.4);
}



/**********************************************************
    
               Custom SharePoint Overrides

**********************************************************/

input.ms-long {
  width: 100% !important;
}
/* ... */

